replace db setting

--- a/config/env/development.json5.sample
+++ b/config/env/development.json5.sample
@@ -1,7 +1,7 @@
 {
     // This is your MYSQL Database configuration
     db: {
-        name: "mean_relational",
+        name: "mean_relational_todo",
         password: "",
         username: "root",
         host: "localhost",
