--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "mean-stack-relational",
-  "description": "M*EAN - A Modern Stack: MySQL, ExpressJS, AngularJS, NodeJS. (BONUS: Passport User Support).",
-  "version": "0.2.0",
+  "name": "mean-stack-todo",
+  "description": "Todo App as an angular showcase based on M*EAN Stack Relational.",
+  "version": "0.0.1",
   "private": false,
-  "author": "Jeff Potter",
+  "author": "Chaudhry Junaid",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jpotts18/mean-stack-relational.git"
+    "url": "https://github.com/chaudhryjunaid/mean-stack-todo.git"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
+    "node": "4.2.x",
+    "npm": "2.14.x"
   },
   "scripts": {
     "start": "node node_modules/grunt-cli/bin/grunt",
     "test": "node node_modules/grunt-cli/bin/grunt test",
-    "postinstall": "bower install"
+    "postinstall": "node node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "async": "latest",
@@ -43,11 +43,7 @@
     "mysql": "^2.9.0",
     "nconf": "^0.8.2",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.0.0",
-    "passport-google": "latest",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.3",
-    "proxyquire": "^1.7.3",
     "sequelize": "^3.13.0",
     "serve-favicon": "^2.3.0",
     "standard-error": "^1.1.0",
@@ -59,20 +55,6 @@
     "grunt-concurrent": "latest",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-nodemon": "^0.5.2",
-    "grunt-contrib-watch": "latest",
-    "grunt-karma": "~0.6.2",
-    "grunt-mocha-test": "latest",
-    "karma": "~0.10.4",
-    "karma-chrome-launcher": "~0.1.0",
-    "karma-coffee-preprocessor": "~0.1.0",
-    "karma-coverage": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.3",
-    "karma-phantomjs-launcher": "~0.1.0",
-    "karma-requirejs": "~0.2.0",
-    "karma-script-launcher": "~0.1.0",
-    "mocha": "^2.2.5",
-    "supertest": "latest"
+    "grunt-contrib-watch": "latest"
   }
 }
