--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "angular-cookies": "latest",
     "angular-route": "latest",
     "bootstrap": "latest",
-    "angular-bootstrap": "latest"
+    "angular-bootstrap": "latest",
+    "jquery":"latest"
   }
 }
